syntax = "proto3";

package portochat;

option java_package = "com.lttldrgn.portochat.proto";

message StringData {
    string value = 1;
}

message StringList {
    repeated string values = 1;
}

message UserData {
    string id = 1;
    string name = 2;
    string host = 3;
}
message PortoChatMessage {
    string originatorId = 1;
    oneof ApplicationMessage {
        ChannelList channelList = 2;
        Notification notification = 3;
        Ping ping = 4;
        Pong pong = 5;
        Request request = 6;
        UserList userList = 7;
    }
}

message Request {
    enum RequestType {
        ChannelList = 0;
        ChannelUserList = 1;
        ChannelJoin = 2;
        SetUserName = 3;
        UserList = 4;
    }
    string requestId = 1;
    RequestType requestType = 2;
    oneof RequestData {
        StringData stringRequestData = 3;

    }
}

message Notification {
    oneof NotificationData {
        ChannelJoin channelJoin = 1;
        ChannelPart channelPart = 2;
        ChannelAdded channelAdded = 3;
        ChannelRemoved channelRemoved = 4;
        UserConnectionStatus userConnectionStatus = 5;
    }
}

message ChannelJoin {
    string channel = 1;
    string userId = 2;
}
message ChannelPart {
    string channel = 1;
    string userId = 2;
}
message ChannelAdded {
    string channel = 1;
}
message ChannelRemoved {
    string channel = 1;
}
message ChannelList {
    StringList channels = 1;
}
message UserList {
    repeated UserData users = 1;
    string channel = 2;
}

message UserConnectionStatus {
    UserData user = 1;
    bool connected = 2;
}

message Ping {
    int64 timestamp = 1;
}
message Pong {
    int64 timestamp = 1;
}